[package]
name = "wasmtime-async"
version = "1.0.0"
authors = ["Léo Gaspard <leo@gaspard.io>"]
edition = "2018"
description = "Async support for wasmtime, with separate stacks"
readme = "README.md"
repository = "https://github.com/Ekleog/wasmtime-async"
license = "MIT OR Apache-2.0"
keywords = ["async", "futures", "wasm", "webassembly"]
categories = ["asynchronous", "wasm"]

[badges]
is-it-maintained-issue-resolution = { repository = "Ekleog/wasmtime-async" }
is-it-maintained-open-issues = { repository = "Ekleog/wasmtime-async" }
maintenance = { status = "deprecated" }
